<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_teleop</name>
  <version>1.0.0</version>
  <description>Teleoperation for TurtleBot3 using keyboard</description>
  <maintainer email="yangjunseok@todo.todo">yangjunseok</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

